fixed a gap issue

--- a/src/Styles/header.scss
+++ b/src/Styles/header.scss
@@ -203,7 +203,6 @@ svg {
     z-index: 1000;
     display:flex;
     flex-direction: column;
-    gap:10px;
     color:white;    
     border-left:1px solid gray ;
     border-right:1px solid gray ;
